components/home-assistant/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
      # nginx.ingress.kubernetes.io/rewrite-target: /$1
      # nginx.ingress.kubernetes.io/configuration-snippet: |
      #   proxy_set_header Host $host;
    name: home-assistant
    namespace: default
  spec:
    rules:
    - host: home.raelix.com
      http:
        paths:
        - backend:
            service:
              name: home-assistant
              port:
                name: https
          path: /
          pathType: ImplementationSpecific
    tls:
    - secretName: home.raelix.com-tls
      hosts:
      - home.raelix.com
      
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
      # nginx.ingress.kubernetes.io/ssl-redirect: "true"
      # nginx.ingress.kubernetes.io/rewrite-target: /$1
      nginx.ingress.kubernetes.io/configuration-snippet: |
        proxy_set_header Host $host;
    name: home-assistant-passthrough
    namespace: default
  spec:
    rules:
    - host: raelix.duckdns.org
      http:
        paths:
        - backend:
            service:
              name: home-assistant
              port:
                name: https
          path: /
          pathType: ImplementationSpecific
    tls:
    - secretName: raelix.duckdns.org-tls
      hosts:
      - raelix.duckdns.org
